--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,68 @@
-.App {
-  text-align: center;
+ul{
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container{
+  height: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  flex-direction: column;
+  padding: 2rem;
+}
+.row{
+  min-height: 13rem;
+  min-width: 100%;
+  padding:.5rem;
+  box-sizing: border-box;
+  display: flex;
+  border-radius: 5px;
+  align-items: center;
+}
+.priority-row{
+  background-color: #bafffc;
+  border: 1px solid #000;
+  margin-bottom: 2rem;
+}
+.non-priority-row{
+  background-color: #f6ff6b8f;
+  border: 1px solid #000;
+}
+.p-container,.np-container{
+  width: 100%;
+}
+.item{
+  min-height: 12rem;
+  width: 10rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
+  background-color: #fff;
+  border: 1px solid #000;
+  border-radius: 5px;
+  box-shadow: 2px 2px 2px  rgba(0, 0, 0, 0.144);
+  margin-right: .5rem;
+}
+.item:first-child{
+  background-color: #7cfe80de;
+}
+.item:last-child{
+  margin-left: 0;
+}
+.item .item-footer{
+  width: 100%;
+  height: 3rem;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  bottom: 0;
+  background-color: rgba(255, 255, 255, 0.37);
+}
+.item span{
+  font-weight: bold;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
